--- a/server/chat-backend/package.json
+++ b/server/chat-backend/package.json
@@ -25,10 +25,13 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "bcrypt": "^5.1.0",
+    "class-validator": "^0.14.0",
     "dotenv": "^16.0.3",
+    "nestjs-typeorm-paginate": "^4.0.3",
     "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0",
+    "rxjs": "^7.8.1",
     "typeorm": "^0.3.16"
   },
   "devDependencies": {
