--- a/client/chat-frontend/package.json
+++ b/client/chat-frontend/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^15.2.0",
     "@auth0/angular-jwt": "^5.1.2",
     "angular-jwt": "^0.1.11",
+    "ngx-socket-io": "^4.5.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
